# version_zero

./: .gitignore  AGENTS.md  CLAUDE.md  EXPANSION_PLAN.md  FEATURE_ROADMAP.md  PROGRESS.md  README.md  UI_ENHANCEMENT_PLAN.md  docker-compose.yml  gen_docs.py  plan.md
.claude/: settings.json
backend/: .env.example  .railwayignore  alembic.ini  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_remove_associate_role.py  f5e1eab0d999_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  companies.py  contacts.py  mandates.py  schedule.py  users.py
backend/app/core/: config.py  deps.py  security.py  time.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  company.py  contact.py  enums.py  firm.py  mandate.py  mandate_assignment.py  outreach_event.py  outreach_schedule.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  company.py  contact.py  firm.py  mandate.py  outreach_event.py  outreach_schedule.py  user.py
backend/app/seed/: __init__.py  seed.py
backend/app/services/: __init__.py  analytics.py  benchmark.py  cadence.py  cross_mandate.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_cadence.py  test_companies.py  test_contacts.py  test_health.py  test_mandates.py
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.mts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/components/: providers.tsx
frontend/hooks/: use-analytics.ts  use-auth.ts  use-companies.ts  use-contacts.ts  (+4 more)
(+38 files in other folders)
