[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upstream-backend"
version = "0.1.0"
description = "Project Upstream — M&A deal-sourcing CRM backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0.29",
    "aiosqlite>=0.20",          # async SQLite driver (dev)
    "asyncpg>=0.29",            # async Postgres driver (prod)
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",     # pydantic EmailStr
    "python-jose[cryptography]>=3.3",  # JWT signing/verification
    "passlib[bcrypt]>=1.7.4",          # password hashing
    "bcrypt>=4.0.1,<4.1",              # pinned: passlib 1.7.4 breaks against bcrypt >= 4.1
    "python-multipart>=0.0.9",  # form parsing (OAuth2 docs login)
    "faker>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.3",
    "psycopg2-binary>=2.9",     # sync Postgres driver for Alembic migrations
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
